--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "console"
   ],
   "author": "Aktan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
